<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">


    <edu.commonwealthu.finalproject.Background
        android:id="@+id/scrollingBackgroundView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/title"
        android:text="@string/title_text"
        android:textColor="@color/white"
        android:textSize="64sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/gameIcon"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/game_icon"
        app:layout_constraintBottom_toTopOf="@+id/startGameButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"/>



    <Button
        android:id="@+id/startGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/neon_color"
        android:src="@drawable/neon_color"
        android:fontFamily="@font/title"
        android:text="@string/start_game_text"
        android:textSize="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalGuideline" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <FrameLayout
        android:id="@+id/gameViewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@drawable/background">

        <edu.commonwealthu.finalproject.Background
            android:id="@+id/scrollingBackgroundView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />



        <ImageView
            android:id="@+id/startGameIcon"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="300dp"
            android:src="@drawable/game_icon" />


        <ImageView
            android:id="@+id/top_pipe"
            android:layout_width="75dp"
            android:layout_height="300dp"
            android:layout_gravity="top|end"
            android:layout_marginEnd="16dp"
            android:background="@drawable/top_pipe"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/bottom_pipe"
            android:layout_width="75dp"
            android:layout_height="300dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bottom_pipe"
            android:scaleType="fitXY" />


        <TextView
            android:id="@+id/game_points"
            android:fontFamily="@font/scores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            android:textSize="88dp"
            android:textColor="@color/white"
            android:text="@string/score"/>



    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

